--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "bootstrap": "^4.5.0",
+    "mdbootstrap": "^4.19.0",
     "rxjs": "~6.4.0",
+    "tailwindcss": "^1.4.6",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
