--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "../node_modules/bulma/css/bulma.css"
-            ],
+              "src/styles.css"
+             ],
             "scripts": []
           },
           "configurations": {
