--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "bootstrap": "^4.5.0",
     "bulma": "^0.8.2",
+    "firebase": "^7.14.6",
     "mdbootstrap": "^4.19.0",
     "rxjs": "~6.4.0",
     "tailwindcss": "^1.4.6",
