--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.14",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
@@ -24,6 +25,8 @@
     "bulma": "^0.8.2",
     "firebase": "^7.14.6",
     "mdbootstrap": "^4.19.0",
+    "primeicons": "^4.0.0-rc.2",
+    "primeng": "^9.1.0",
     "rxjs": "~6.4.0",
     "tailwindcss": "^1.4.6",
     "tslib": "^1.10.0",
