--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "-": "0.0.1",
     "@angular/animations": "~8.2.14",
     "@angular/cdk": "^9.2.4",
     "@angular/common": "~8.2.14",
@@ -28,6 +29,7 @@
     "primeicons": "^4.0.0-rc.2",
     "primeng": "^9.1.0",
     "rxjs": "~6.4.0",
+    "save": "^2.4.0",
     "tailwindcss": "^1.4.6",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
