--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@firebase/webchannel-wrapper": "0.2.41",
+    "angular-material": "^1.1.22",
     "bootstrap": "^4.5.0",
     "bulma": "^0.8.2",
     "firebase": "^7.14.6",
